# ai_challenge_01

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  reminders.json
.claude/agents/: backend-api-specialist.md  code-implementor.md  docs-writer.md  frontend-developer.md  infra-backend-agent.md  lint-code-reviewer.md  qa-review-supervisor.md  test-writer.md  validator.md
.claude/commands/: help_project.md
.task/: TASK-001-docker-slash-commands.md  TASK-002-rag-pipeline.md  TASK-003-rag-first-query.md  TASK-004-rag-relevance-filter-reranker.md  TASK-005-rag-mcp-project-help.md  TASK-005-rag-mini-chat-cli.md  TASK-006-pr-review-rag-mcp.md  TASK-022-SPEC.md  TASK-022-support-assistant-telegram-rag-mcp.md  draft.md
.task/task1/: plan.md  task.md
backend/: .coverage  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_system_prompt.py  003_add_temperature.py  004_add_history_compression.py  005_add_compression_fields.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  health.py  message.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  chat.py  message.py  user.py
backend/app/schemas/: __init__.py  chat.py  message.py  rabbitmq.py  user.py
backend/app/services/: __init__.py  chat.py  compression.py  rabbitmq.py
backend/app/workers/: __init__.py  response_consumer.py
backend/migrations/: rag_chat_init.sql  rag_init.sql
backend/tests/: README.md  conftest.py  test_compression.py
docs/: rag-filter-demo.md
frontend/: .dockerignore  README.md  package-lock.json  package.json
gemini-client/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gemini-client/gemini_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gemini-client/src/: config.py  main.py
gemini-client/src/client/: gemini.py  key_manager.py
gemini-client/src/schemas/: request.py  response.py
gemini-client/src/utils/: logging.py  retry.py
gemini-client/src/worker/: consumer.py  publisher.py
gemini-client/tests/: test_gemini_client.py  test_key_manager.py
hysteria/: config.example.yaml  config.yaml
mcp/: README.md
nginx/: nginx.conf
support-bot/: README.md
(+85 files in other folders)
